<resources>
    <string name="app_name">MiPrimerSQLiteAndroidA</string>
    <string name="action_settings">Settings</string>
    <string name="nameLabel">Name</string>
    <string name="emailLabel">E-mail</string>
    <string name="twitterLabel">Twitter</string>
    <string name="phoneLabel">Phone</string>
    <string name="birthDateLabel">Birthdate</string>
    <string name="doneLabel">Done!</string>
    <string name="changeDateLabel">Change Date</string>
</resources>
